--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 
 body {
     background-color: #222831;
+    height: calc(200vh);
 }
 
 a, a:hover {
@@ -30,28 +31,33 @@ li {
     background-color: #222831;
 }
 
-.header .nav-bar {
+.nav-bar {
     width: 90%;
-    height: 80px;
+    height: 120px;
     margin: auto;
     color: #00adb5;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 80px;
+    padding-top: 30px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 1000000;
+    background-color: #222831;
 }
 
-.header .nav-bar .logo a {
+.nav-bar .logo a {
     font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
 }
 
-.header .nav-bar .menu ul li{
+.nav-bar .menu ul li{
     margin-right: 30px;
 }
 
-.header .nav-bar .menu ul li a {
+.nav-bar .menu ul li a {
     font-size: 19px;
     letter-spacing: 2px;
     padding: 10px;
@@ -61,15 +67,15 @@ li {
     opacity: 0.6;
 }
 
-.header .nav-bar .menu ul li a.active {
+.nav-bar .menu ul li a.active {
     opacity: 1;
 }
 
-.header .nav-bar .menu ul li a:hover {
+.nav-bar .menu ul li a:hover {
     opacity: 1;
 }
 
-.header .nav-bar .social-media ul li i{
+.nav-bar .social-media ul li i{
     width: 45px;
     height: 45px;
     line-height: 45px;
@@ -81,8 +87,8 @@ li {
     transition: all 0.3s ease-in-out;
 }
 
-.header .nav-bar .social-media ul li i:hover{
-    background-color: #DFDFDF;
+.nav-bar .social-media ul li i:hover{
+    background: linear-gradient(#b50054,#0091b5);
 }
 
 .hero {
@@ -102,6 +108,8 @@ li {
     width: 40%;
     margin-top: 100px;
     margin-left: 50px;
+    background: transparent;
+    z-index: 2;
 }
 
 .hero .row .left-section h2{
@@ -112,10 +120,6 @@ li {
     text-transform: capitalize;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-
-.hero .row .left-section h2 span{
-    color: white;
 }
 
 .hero .row .left-section p{
@@ -138,6 +142,25 @@ li {
     z-index: 999;
 }
 
+@keyframes test {
+    0%,100% {
+        top: 50%;
+        left: 50%;
+    }
+    25% {
+        top: 60%;
+        left: 40%;
+    }
+    50% {
+        top: 60%;
+        right: 80%;
+    }
+    75% {
+        top: 40%;
+        left: 64%;
+    }
+  }
+
 
 
 .ball {
@@ -149,6 +172,7 @@ li {
     top: 50%;
     left: 50%;
     transform: translate( -50%, -50%);
+    animation: test 6s infinite alternate cubic-bezier(1,.02,0,1);;
 }
 
 .pupil {
@@ -231,14 +255,24 @@ li {
 }
 
 .hero .row .container {
+    animation: move 2s infinite alternate ease-in-out;
     border-radius: 30px;
     background-color: #198a94;
-    width: 40%;
-    padding-top: 40%;
+    width: 36%;
+    padding-top: 36%;
     position: relative;
     transform: translate(-10%,10%);
-    z-index: 100000000;
+    z-index: 10000;
 }
+
+@keyframes move {
+    0%,100% {
+        top: 0;
+    }
+    50% {
+        top: 20px;
+    }
+  }
 
 .sub-container1 {
     width: 25%;
@@ -274,9 +308,142 @@ li {
     z-index: 3;
 }
 
+.wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+}
 
+.box div {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    border-radius: 30px;
+    border: 6px solid transparent;
+    border-image: linear-gradient(285deg
+    ,#71c986 10%,#71c9a6 30%, #71c9c5 50%,#71adc9 70%);
+    -webkit-border-image: -webkit-linear-gradient(285deg
+    ,#71c986 10%,#71c9a6 30%, #71c9c5 50%,#71adc9 70%);
+    border-image-slice: 1;
+    z-index: 1;
+}
+
+.box div:nth-child(1) {
+    width: 40px;
+    height: 40px;
+    top: 30%;
+    left: 28%;
+    animation: animate 9s linear infinite;
+}
+
+.box div:nth-child(2) {
+    top: 60%;
+    left: 50%;
+    animation: animate 9s linear infinite;
+}
+
+.box div:nth-child(3) {
+    width: 50px;
+    height: 50px;
+    top: 18%;
+    left: 20%;
+    animation: animate 7s linear infinite;
+}
+
+.box div:nth-child(4) {
+    top: 25%;
+    left: 10%;
+    animation: animate 5s linear infinite;
+}
+
+.box div:nth-child(5) {
+    top: 30%;
+    right: 10%;
+    animation: animate 6s linear infinite;
+}
+
+.box div:nth-child(6) {
+    top: 48%;
+    right: 30%;
+    animation: animate 8s linear infinite;
+}
+
+.box div:nth-child(7) {
+    top: 33%;
+    right: 50%;
+    animation: animate 8s linear infinite;
+}
+
+.box div:nth-child(8) {
+    width: 40px;
+    height: 40px;
+    top: 10%;
+    right: 20%;
+    animation: animate 10s linear infinite;
+}
+
+.box div:nth-child(9) {
+    top: 50%;
+    left: 15%;
+    animation: animate 7s linear infinite;
+}
+
+.box div:nth-child(10) {
+    width: 80px;
+    height: 80px;
+    bottom: 15%;
+    left: 31%;
+    animation: animate 11s linear infinite;
+}
+
+.box div:nth-child(11) {
+    width: 100px;
+    height: 100px;
+    bottom: 25%;
+    right: 10%;
+    animation: animate 14s linear infinite;
+}
+
+
+@keyframes animate {
+    0% {
+        transform: scale(0) translateY(0) rotate(0);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.3) translateY(-90px) rotate(360deg);
+        opacity: 0;
+    }
+}
+
+@media only screen and (max-width: 900px) { 
+    .hero .row {
+        display: 100%;
+    }
+    .hero .row .left-section {
+        width: 55%;
+    }
+
+}
 
 @media only screen and (max-width: 700px) { 
+    .box div:nth-child(3) {
+        display: none;
+    }
+    .box div:nth-child(6) {
+        display: none;
+    }
+    .box div:nth-child(7) {
+        display: none;
+    }
+    .box div:nth-child(8) {
+        display: none;
+    }
+    .box div:nth-child(9) {
+        display: none;
+    }
     .container {
         display: none;
     }
